# catkin_curobo

Docker/: Dockerfile  mpc_ur_arm_launcher.sh
devel/: .catkin  local_setup.sh
devel/lib/map_manager/: dynamic_map_node  esdf_map_node  occupancy_map_node  save_map_node
devel/lib/navigation_runner/: safe_action_node
devel/lib/onboard_detector/: detector_node  fake_detector_node
devel/lib/pkgconfig/: map_manager.pc  mpc_tracking.pc  navigation_runner.pc  onboard_detector.pc  robot_arm_planner.pc  uav_simulator.pc  ur10e_vs_node.pc
devel/lib/uav_simulator/: keyboard_control
devel/lib/ur10e_vs_node/: ur10e_vs_node
devel/share/gennodejs/ros/map_manager/srv/: _index.js
devel/share/gennodejs/ros/navigation_runner/srv/: _index.js
devel/share/map_manager/cmake/: map_manager-msg-extras.cmake  map_managerConfig.cmake
devel/share/mpc_tracking/cmake/: mpc_trackingConfig.cmake
devel/share/navigation_runner/cmake/: navigation_runner-msg-extras.cmake  navigation_runnerConfig.cmake
devel/share/onboard_detector/cmake/: onboard_detector-msg-extras.cmake  onboard_detectorConfig.cmake
devel/share/robot_arm_planner/cmake/: robot_arm_plannerConfig.cmake
devel/share/roseus/ros/map_manager/: manifest.l
devel/share/roseus/ros/navigation_runner/: manifest.l
devel/share/roseus/ros/onboard_detector/: manifest.l
devel/share/uav_simulator/cmake/: uav_simulatorConfig.cmake
devel/share/ur10e_vs_node/cmake/: ur10e_vs_nodeConfig.cmake
install/lib/pkgconfig/: mpc_tracking.pc  ur10e_vs_node.pc
install/lib/ur10e_vs_node/: aruco_detector.py  mpc_controller_arm.py  tool_mpc_servoing_arm.py  ur10e_vs_node
install/share/mpc_tracking/: package.xml
install/share/mpc_tracking/cmake/: mpc_trackingConfig.cmake
install/share/ur10e_vs_node/cmake/: ur10e_vs_nodeConfig.cmake
scripts/AdmittanceControl_UR12E-main/: Filter.py  README.md  admittance_control.py  servoj_example.py  try.py
src/mpc_tracking/: CMakeLists.txt
src/mpc_tracking/include/mpc_tracking/: mpc.h
src/mpc_tracking/src/: mpc.cpp  visual_servo_mpc_node.cpp
src/robot_arm_planner/: CMakeLists.txt  README_CUROBO_COLLISION.md
src/robot_arm_planner/config/: camera_parameters.yaml  curobo_collision.rviz  curobo_collision_config.yaml
src/robot_arm_planner/launch/: curobo_collision_planner.launch  ur10e_curobo_collision.launch
src/robot_arm_planner/scripts/: curobo_collision_example.py  curobo_collision_planner.py  pd_control_example.py  safe_trajectory_executor.py
src/ros1/: README_ARM_ADAPTATION.md
src/ros1/map_manager/cfg/: esdf_map_param.yaml  occupancy_map_param.yaml
src/ros1/map_manager/include/map_manager/: ESDFMap.cpp  ESDFMap.h  occupancyMap.cpp
src/ros1/map_manager/launch/: esdf_map_arm.launch  occupancy_map_arm.launch
src/ros1/onboard_detector/cfg/: detector_param.yaml
src/ros1/onboard_detector/include/onboard_detector/: dynamicDetector.cpp  dynamicDetector.h
src/ros1/onboard_detector/launch/: run_arm_detector.launch
src/ros1/ur10e_interface/launch/: ur10e_interface.launch
src/ros1/ur10e_interface/src/: ur10e_pose_publisher.cpp
src/ur10e_vs_node/: CMakeLists.txt
src/ur10e_vs_node/launch/: ur10e_vs.launch  ur_visual_servo_mpc.launch  visual_servo_mpc.launch
src/ur10e_vs_node/scripts/: aruco_detector.py  check_controller.sh  mpc_controller_arm.py  start_vel_controller.py  start_vel_controller.sh  tool_mpc_servoing_arm.py  tool_visual_servoing_mpc.py
src/ur10e_vs_node/src/: test.cpp  ur10e_d435i_visual_servo.cpp
